Sending more up to be committed.

--- a/Simon/Simon/Simon.csproj
+++ b/Simon/Simon/Simon.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="gameForm_2.cs" />
     <Compile Include="MemoryGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
